fix: adjust mobile toolbar position to reveal tabs header and revert footer visibility

--- a/src/pages/bot-builder/toolbar/toolbar.scss
+++ b/src/pages/bot-builder/toolbar/toolbar.scss
@@ -9,6 +9,11 @@
     padding: 0.5rem 0.6rem;
     position: absolute;
     top: 0;
+
+    @include mobile-or-tablet-screen {
+        top: 10.8rem;
+    }
+
     inset-inline-start: 23.2rem;
     background-color: var(--general-main-1);
     z-index: 1;
@@ -134,7 +139,7 @@
         @include mobile-or-tablet-screen {
             background-color: var(--general-main-1);
             position: absolute;
-            top: 6.4rem;
+            top: 10.8rem;
             overflow-y: auto;
             scrollbar-width: none;
             height: calc(100% - 5rem);
